Fix tables and header on mobile

--- a/source/stylesheets/_10_column_grid.scss
+++ b/source/stylesheets/_10_column_grid.scss
@@ -1,4 +1,5 @@
 #column-grid {
+  display: block !important;
   position: fixed;
   top: 0;
   left: 0;
